# django-puepy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-tests.yml
django_puepy/: __init__.py  apps.py  config.py  paths.py  puepy_view.py  urls.py
django_puepy/static/django_puepy/: django_backend.py  dtjson.py  puepy-0.3.4-py3-none-any.whl  puepy-0.3.5-py3-none-any.whl  puepy-0.3.7-py3-none-any.whl
django_puepy/templates/django_puepy/: puepy_script.html  puepy_view.html
django_puepy/templatetags/: puepy.py
example_app/: backend_server.py
example_app/static/: todo.py
tests/: test_puepy_view.py  test_settings.py
