[tool.poetry]
name = "django-puepy"
version = "0.1.0"
description = "PuePy integration for Django"
authors = ["Ken Kinder <ken+github@kkinder.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.7"
puepy = "^0.3.4"
json-dt-serializer = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
